tests/baselines/reference/thisInSuperCall.types
=== tests/cases/compiler/thisInSuperCall.ts ===
class Base { 
>Base : Base

    constructor(x: any) {}
>x : any
>类型别名 :=> 任意
}

class Foo extends Base {
>Foo : Foo
>Base : Base

    constructor() {
        super(this); // error: "super" has to be called before "this" accessing
>super(this) : void
>类型别名 :=> 无值
>super : typeof Base
>this : this
    }
}

class Foo2 extends Base {
>Foo2 : Foo2
>Base : Base

    public p = 0;
>p : number
>类型别名 :=> 数字
>0 : 0

    constructor() {
        super(this); // error
>super(this) : void
>类型别名 :=> 无值
>super : typeof Base
>this : this
    }
}

class Foo3 extends Base {
>Foo3 : Foo3
>Base : Base

    constructor(public p) {
>p : any
>类型别名 :=> 任意

        super(this); // error
>super(this) : void
>类型别名 :=> 无值
>super : typeof Base
>this : this
    }
}
